# pr6sem2

./: CMakeLists.txt  README.md  pr6sem2part1.c  pr6sem2part2.c
